@@ -1,7 +1,7 @@
 Package: hts
 Type: Package
 Title: Hierarchical and grouped time series
-Version: 4.2
+Version: 4.3
 Depends: forecast (>= 5.0)
 Imports: SparseM, parallel
 Suggests: testthat
